--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "pe",
   "version": "1.0.0",
-  "description": "个人网站前端",
-  "author": "weiwuhu",
+  "description": "My world-class Nuxt.js project",
+  "author": "weiwuhugood",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
     "bootstrap-vue": "^2.0.0",
     "bootstrap": "^4.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  }
 }
