--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "bootstrap-vue": "^2.0.0",
-    "bootstrap": "^4.1.3"
+    "markdown-it": "^10.0.0",
+    "nuxt": "^2.0.0",
+    "responsive-nav": "^1.0.39",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
