--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "markdown-it": "^10.0.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "responsive-nav": "^1.0.39",
     "vue": "^2.6.11"
