--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cross-env": "^5.2.0",
+    "element-ui": "^2.14.0",
     "express": "^4.16.4",
+    "jquery": "^3.5.1",
     "markdown-it": "^10.0.0",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
